# uwazi-backend

./: .gitignore  README.md  docker.yml  pyproject.toml  vercel.json
.github/workflows/: keepalive.yml
alembic/: env.py
alembic/versions/: 24e82e9079c0_add_department_field_to_users_model.py  43c00a94605b_add_new_models_schemas.py  50c9e33248b8_initial_migration.py  577d1a7220be_initial_schema.py  738357f34994_add_app_models_and_relationships.py  7a8a8963f1b9_add_procurement_entity_bids_models.py  95a3326e1bae_increase_entity_code_and_entity_type_.py  ca90744e1234_add_user_roles_permissions_models.py  d21bbbc6b324_add_attachements_field_to_tenders.py  f8e6bea07921_rename_procuring_entity_to_entity_name_.py  fb5e60bab94c_add_whistleblower_model.py
app/: enums.py  main.py
app/core/: config.py  database.py  dependencies.py  dependencies_v1.py  logger.py  scheduler.py  security.py
app/middleware/: logger_middleware.py
app/ml/: MODEL_MAP.py  collusion.py  price_anomaly.py  spec_nlp.py  spending_forecast.py  supplier_risk.py  xgb_risk_model.py
app/models/: __init__.py  alert_model.py  analysis_result_model.py  association_tables_model.py  audit_log_model.py  bid_model.py  contract_model.py  director_model.py  entity_model.py  enums_model.py  investigation_model.py  market_price_model.py  network_edge_model.py  network_node_model.py  permission_model.py  price_benchmark_model.py  procuring_entity_model.py  red_flag_model.py  refresh_token_model.py  risk_score_model.py  role_model.py  supplier_model v1.py  supplier_model.py  (+7 more)
uwazi-backend-api-tests/: bruno.json
(+125 files in other folders)
